fix: high contrast mode for checkbox

--- a/components/checkbox/skin.css
+++ b/components/checkbox/skin.css
@@ -237,25 +237,35 @@ governing permissions and limitations under the License.
   }
 
   .spectrum-Checkbox {
-    --spectrum-checkbox-m-emphasized-box-background-color: var(--spectrum-alias-background-color-transparent);
-    --spectrum-checkbox-m-emphasized-box-background-color-disabled: var(--spectrum-alias-background-color-transparent);
-    --spectrum-checkbox-m-emphasized-box-border-color-disabled: GrayText;
-    --spectrum-checkbox-m-text-color-disabled: GrayText;
-    --spectrum-checkbox-m-box-border-color-key-focus: FieldText;
-    --spectrum-checkbox-m-emphasized-box-border-color: FieldText;
-    --spectrum-checkbox-m-quiet-box-border-color: FieldText;
+    --spectrum-checkbox-m-box-background-color-disabled: ButtonFace;
+    --spectrum-checkbox-m-box-background-color: ButtonFace;
+    --spectrum-checkbox-m-box-border-color-disabled: GrayText;
+    --spectrum-checkbox-m-box-border-color-down: Highlight;
+    --spectrum-checkbox-m-box-border-color-error-down: Highlight;
+    --spectrum-checkbox-m-box-border-color-error-hover: Highlight;
+    --spectrum-checkbox-m-box-border-color-error: Highlight;
+    --spectrum-checkbox-m-box-border-color-hover: Highlight;
+    --spectrum-checkbox-m-box-border-color-key-focus: Highlight;
+    --spectrum-checkbox-m-box-border-color-selected-down: Highlight;
     --spectrum-checkbox-m-box-border-color-selected-hover: Highlight;
-    --spectrum-checkbox-m-emphasized-box-border-color-selected-hover: Highlight;
-    --spectrum-checkbox-m-quiet-box-border-color-selected-hover: Highlight;
-    --spectrum-checkbox-m-emphasized-box-border-color-selected: Highlight;
-    --spectrum-checkbox-m-quiet-box-border-color-selected: Highlight;
+    --spectrum-checkbox-m-box-border-color-selected-key-focus: Highlight;
+    --spectrum-checkbox-m-box-border-color-selected: Highlight;
+    --spectrum-checkbox-m-box-border-color: ButtonText;
     --spectrum-checkbox-m-checkmark-color: HighlightText;
+    --spectrum-checkbox-m-emphasized-box-border-color-selected-down: Highlight;
+    --spectrum-checkbox-m-emphasized-box-border-color-selected-hover: Highlight;
+    --spectrum-checkbox-m-emphasized-box-border-color-selected-hover: Highlight;
+    --spectrum-checkbox-m-emphasized-box-border-color-selected: Highlight;
+    --spectrum-checkbox-m-emphasized-text-color-hover: FieldText;
     --spectrum-checkbox-m-focus-ring-color-key-focus: Highlight;
-    --spectrum-checkbox-m-focus-ring-gap-key-focus: var(--spectrum-global-dimension-static-size-25);
-    --spectrum-checkbox-m-focus-ring-size-key-focus: var(--spectrum-global-dimension-static-size-40);
-    --spectrum-checkbox-m-box-border-color-error: FieldText;
-    --spectrum-checkbox-m-box-border-color-error-hover: FieldText;
-    --spectrum-checkbox-m-box-border-color-error-selected: FieldText;
+    --spectrum-checkbox-m-text-color-disabled: GrayText;
+    --spectrum-checkbox-m-text-color-down: FieldText;
+    --spectrum-checkbox-m-text-color-error-down: FieldText;
+    --spectrum-checkbox-m-text-color-error-hover: FieldText;
     --spectrum-checkbox-m-text-color-error: FieldText;
+    --spectrum-checkbox-m-text-color-hover: FieldText;
+    --spectrum-checkbox-m-text-color-key-focus: FieldText;
+    --spectrum-checkbox-m-text-color: FieldText;
+
   }
 }
